--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -1,11 +1,14 @@
+/* main.css */
+
 #count {
-	display: inline;
-	font-weight: bold;
+  display: inline-block;
+  margin-left: 20px;
+  font-weight: bold;
 }
 
 #logo {
-	width: 200px;
-	height: 200px;
-	background: url('../assets/holberton-logo.jpg');
-	background-size: 200px 200px;
+  width: 200px;
+  height: 200px;
+  background: url('../assets/holberton-logo.jpg') no-repeat center;
+  background-size: 200px 200px;
 }
