--- a/0x00-Webpack/task_3/modules/body/body.css
+++ b/0x00-Webpack/task_3/modules/body/body.css
@@ -1,14 +1,4 @@
-main {
-  padding: 20px;
-  text-align: center;
-}
-
-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  margin: 10px;
-}
-
-p {
-  font-size: 18px;
+#count {
+  display: inline;
+  font-weight: bold;
 }
