--- a/0x00-Webpack/task_3/modules/header/header.css
+++ b/0x00-Webpack/task_3/modules/header/header.css
@@ -1,7 +1,6 @@
-header {
-  background-color: #f5f5f5;
-  padding: 20px;
-  text-align: center;
-  font-size: 24px;
-  border-bottom: 1px solid #ddd;
+#logo {
+  width: 200px;
+  height: 200px;
+  background-image: url('../../assets/holberton-logo.jpg');
+  background-size: 200px 200px;
 }
